# tutorials

./: git入门.pptx  康识字.txt
him_cararm_driver/: CMakeLists.txt  package.xml
him_cararm_driver/action/: CarPose.action  WayPointPose.action
him_cararm_driver/include/him_cararm_driver/: Communicate.h  arm_ros_wrapper.h  common.h  fk_ik.h  motion_planning.h
him_cararm_driver/launch/: arm_bringup.launch  arm_common.launch
him_cararm_driver/src/: Communicate.cpp  arm_ros_wrapper.cpp  fk_ik.cpp  motion_planning.cpp
moveit/planning/: cv_grip.cpp  grip_cv3.cpp  grip_cv_plus_check.cpp  grip_cvnew.cpp  pose
moveit/planning/launch/: cabinet_grab.launch  desktop_grab.launch  desktop_water.launch  planning_pipeline_tutorial.launch  twocamtest.launch
moveit/planning/src/: cabinet_grab (copy).cpp  cabinet_grabNI.cpp  cabinet_grabNIros.cpp  cabinetvs2machines.cpp  cabinetvscpp  curPose.cpp  desktop_grab_.cpp  desktop_grabvs.cpp  get_pose.cpp  grip_goodsrv-0307.cpp  hand_control.cpp  move_pose.cpp  move_pose0328.cpp  move_pose_old.cpp  move_posedynamicq.cpp  moveit_tu_zym.cpp  robot_state_publisher.cpp  testforhand.cpp  twocamtest.cpp  velocity_test.cpp  vsMove_single.cpp  vsMove_single2.cpp  vsMovedynamic.cpp  vsMovesrv2.cpp  vsMovesrv_position.cpp  water.cpp
moveit/planning/src/desktop_egg_pen/: desktop_grab_egg3.cpp
my_pcl_tutorial-master/my_pcl_tutorial-master/: CMakeLists.txt  package.xml
my_pcl_tutorial-master/my_pcl_tutorial-master/launch/: octomap.launch
my_pcl_tutorial-master/my_pcl_tutorial-master/msg/: Obstacle.msg
my_pcl_tutorial-master/my_pcl_tutorial-master/scripts/: broadcast_tf.py  frames.gv
my_pcl_tutorial-master/my_pcl_tutorial-master/src/: boxpclSub.cpp  cluster_kinect.cpp  cluster_v2.cpp  example.cpp  find_plane.cpp  find_plane_v2.cpp  planar_segmentation.cpp  pub_obstacles.cpp  random_sample_consensus.cpp
object_detect/: CMakeLists.txt  imageMatching.cpp  multiple_depth.cpp  multiple_detect.cpp  package.xml
object_detect/src/: BI_main.cpp  BI_main.h  Labmain2.cpp  areq.cpp  background.cpp  bg_sub.cpp  bottle.cpp  bottle_cv.h  boxPointsCloud.cpp  box_pos_check.cpp  box_side_check.cpp  box_side_check0308.cpp  box_side_test.cpp  cab_ni.cpp  cabinet_center_left.cpp  cabinet_center_leftroi.cpp  cabinet_center_leftroi_ur5bk0526.cpp  cabinet_center_openni.cpp  cabinet_center_single_longb.cpp  cabinet_centermultiple_depth.cpp  cabinet_longb_nodriver.cpp  cabinet_openni.cpp  cabni.cpp  cabni.h  cabni_lb.cpp  cabnilb.h  colorhistogram.h  desktop_center_left.cpp  desktop_depth .cpp  desktop_depth.cpp  desktop_pen_depth.cpp  desktop_rect_depth.cpp  desktop_rect_depth1.0.cpp  desktoptest.txt.cpp  grip_goodsrv.cpp  imageMatching.cpp  multiple_depth.cpp  multiple_depth0412.cpp  multiple_depth_qb.cpp  multiple_detect.cpp  (+8 more)
object_detect/src/desktop/: desktop_six_multi.h  desktop_six_multibk.h
object_detect/src/egg/: egg_kinect.cpp
object_detect/src/mobile_shelf/: mobile_shelf.cpp  mobile_shelf.h
object_detect/src/pen/: pen_kinect.cpp
object_detect/src/zbar/: zbar.cpp
