<?xml version="1.0"?>
<package>
  <name>him_cararm_driver</name>
  <version>0.0.1</version>
  <description>The driver for the arm and car produced by herald intelligent machine(HIM) corporation</description>

  <maintainer email="bzhnja@gmail.com">bizhanjia</maintainer>

  <license>Beerware</license>

  <author email="bzhnja@gmail.com">bizhanjia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>serial</build_depend>	
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>serial</run_depend> 
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
